# ucloud-sandboxes

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
docs/: api-reference.md  architecture.md  cli-and-operations.md  deployment-flow.md  distributed-state-protocol.md  managed-registry.md  model-relay.md  routing-gateway.md  sandbox-service-audit.md  sandbox-service-remediation-plan.md  scaling-policy.md  sdk-integrations.md  security-stance.md  vm-init.md
scripts/: live_load_benchmark.py  tmax_build_smoke.py
tests/: test_agent.py  test_async_exec.py  test_async_gateway.py  test_async_node_agent.py  test_autoscaler_state.py  test_bootstrap.py  test_build_context_store.py  test_capabilities.py  test_checkpoint_helper.py  test_cli.py  test_config.py  test_control_plane.py  test_deploy.py  test_deployment.py  test_gateway.py  test_http_server.py  test_images.py  test_managed_registry.py  test_metrics.py  test_model_relay.py  test_models.py  test_networking.py  test_node_agent.py  test_policy.py  test_reconcile.py  test_registry.py  test_routing.py  test_runsc_restore.py  test_runtime_metrics.py  test_runtime_probe.py  test_sandbox.py  test_sandbox_exec.py  test_systemd.py  test_tmax.py  test_ucloud.py  test_vm_init.py  test_vm_submit.py
ucloud_sandboxes/: __init__.py  agent.py  async_exec.py  async_gateway.py  async_node_agent.py  autoscaler_state.py  bootstrap.py  build_context_store.py  capabilities.py  checkpoint_helper.py  cli.py  config.py  control_plane.py  dashboard.py  deploy.py  deployment.py  gateway.py  http_server.py  images.py  metrics.py  (+19 more)
(+14 files in other folders)
